--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
       <div class="row">
         <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/loveTribute.png">
+            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
           </div>
           <hr class="line purple">
-          <a href="https://chrisauinmotion.github.io/love_tributePage/" target="_blank">
+          <a href="https://replicode.herokuapp.com/" target="_blank">
             <h3>RepliCode</h3>
           </a>
           <p>Today, there are many learning resources available for those wishing to teach themselves how to code.  One of the learning mediums that both beginners and experienced developers alike often seek out are video coding tutorials.  Video tutorials are great learning resources but they lack the level of interactiveness that learning developers yearn for, so together with a team of developers I developed a solution called Replicode, a content creation platform that allows developers to easily create interactive coding tutorials</p>
