Added myDigiDiet to the portfolio section

--- a/index.html
+++ b/index.html
@@ -134,15 +134,14 @@
         </div>
         <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/projectEuler.png">
+            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
           </div>
           <hr class="line purple">
           <a href="https://chrisauinmotion.github.io/projectEuler_challenge1/" target="_blank">
-            <h3>Project Euler Challenge</h3>
+            <h3>MyDigiDiet</h3>
           </a>
-          <p>Every developer worth their weight in gold finds the time to tackle coding challenges that will keep their skills
-            sharpe. This page presents the successful completion of a mathematical/computer programming problem found on
-            projecteuler.net, a popuar coding challenge website. Raise a glass to victory, raahhhh! </p>
+          <p>MyDigiDiet is a desktop application that helps give users insight into their digital habits. The application was created using Electron (a framework for creating native applications with web technologies like JavaScript, HTML, and CSS), React (a JavaScript library for building user interfaces), Reactstrap (a module that makes it easy to use React Bootstrap 4 components), Webpack (a module whose main purpose is to bundle JavaScript files) and React-chartjs (a module that provides rich interactive react charting components using chart.js).
+            </p>
         </div>
         <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
