--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
           <span class="icon-bar"></span>
         </button>
         <a class="logo" href="#">
-          <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/cp-sm.png"
-            alt="Logo">
+          <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/cp-sm.png" alt="Logo">
         </a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="#skills" class="scroll">Skills</a>
+              </li>
           <li>
             <a href="#bg" class="scroll">Portfolio</a>
           </li>
           <li>
-            <a href="#service" class="scroll">Services</a>
+            <a href="#service" class="scroll">Publications</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
@@ -63,8 +65,7 @@
       <div class="row">
         <div class="col-xs-6">
           <a href="#">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/cp-sm.png"
-              alt="Logo">
+            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/cp-sm.png" alt="Logo">
           </a>
         </div>
       </div>
@@ -75,20 +76,25 @@
             <!--<img class="logoL" src="img/cpL.png" alt="Logo">-->Christopher
             <!--&nbsp &nbsp &nbsp &nbsp-->
             <!--<img class="logoR" src="img/cpR.png" alt="Logo">-->Perez</h1>
-          <h2 class="wow fadeIn headerH2">Front-end Developer</h1>
+          <h2 class="wow fadeIn headerH2">Full Stack Developer</h1>
             <br>
-            <p class="lead wow fadeIn" data-wow-delay="0.5s">Here to be of service building beautiful, functional websites
-              <br> supporting your organizational, personal and business needs.</p>
+            <p class="lead wow fadeIn" data-wow-delay="0.5s">As a young software engineer with a degree in business and
+              <br> experience developing in a NERDS stack (Node.js, Express, React, Databases using SQL)
+              <br> I am eager to build tools and platforms that provide solutions to problems that will
+              <br> have a meaningful impact in the world.</p>
             <br>
 
             <div class="row">
               <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                 <div class="row">
                   <div class="col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
+                    <a href="#skills" class="btn btn-primary btn-lg scroll">Skills</a>
+                  </div>
+                  <div class="col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
                     <a href="#bg" class="btn btn-primary btn-lg scroll">Portfolio</a>
                   </div>
                   <div class="col-xs-4 text-center wow fadeInUp" data-wow-delay="1.4s">
-                    <a href="#service" class="btn btn-primary btn-lg scroll">Services</a>
+                    <a href="#service" class="btn btn-primary btn-lg scroll">Publications</a>
                   </div>
                   <div class="col-xs-4 text-center wow fadeInUp" data-wow-delay="1.8s">
                     <a href="#contact" class="btn btn-primary btn-lg scroll">Contact</a>
@@ -107,61 +113,7 @@
     <div class="scroll"></div>
   </div>
 
-  <section id="bg" class="pad-xs">
-    <div class="container">
-      <div class="row">
-        <div class="portfolioHeader col-sm-8 col-sm-offset-2 text-center margin-0 wow fadeIn" data-wow-delay="0.6s">
-          <h2 class="sectionHeaders">Portfolio</h2>
-          <p class="lead">Built utilizing HTML, CSS and Javascript.
-            <br>All responsively designed to ensure the optimal user experience across various devices.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="main-info" class="pad-xs">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
-          <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
-          </div>
-          <hr class="line purple">
-          <a href="https://replicode.herokuapp.com/" target="_blank">
-            <h3>RepliCode</h3>
-          </a>
-          <p>Today, there are many learning resources available for those wishing to teach themselves how to code.  One of the learning mediums that both beginners and experienced developers alike often seek out are video coding tutorials.  Video tutorials are great learning resources but they lack the level of interactiveness that learning developers yearn for, so together with a team of developers I developed a solution called Replicode, a content creation platform that allows developers to easily create interactive coding tutorials</p>
-        </div>
-        <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-          <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
-          </div>
-          <hr class="line purple">
-          <a href="https://chrisauinmotion.github.io/projectEuler_challenge1/" target="_blank">
-            <h3>MyDigiDiet</h3>
-          </a>
-          <p>MyDigiDiet is a desktop application that helps give users insight into their digital habits. The application was created using Electron (a framework for creating native applications with web technologies like JavaScript, HTML, and CSS), React (a JavaScript library for building user interfaces), Reactstrap (a module that makes it easy to use React Bootstrap 4 components), Webpack (a module whose main purpose is to bundle JavaScript files) and React-chartjs (a module that provides rich interactive react charting components using chart.js).
-            </p>
-        </div>
-        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
-          <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
-          </div>
-          <hr class="line purple">
-          <a href="https://www.inpaclive.com/" target="_blank">
-            <h3>Inpaclive.com</h3>
-          </a>
-          <p>A website built for a talented independent hip-hop artist. The beautiful platform connects the artist's fans to
-            all of his media and presence around the web. Powered with tools for direct sales, building a contact list and
-            collecting valuable analytics that will aid in improving fan engagement.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!--Publications-->
-  <section id="service" class="pad-lg">
+  <section id="skills" class="pad-lg">
     <div class="container">
       <div class="row margin-40">
         <div class="col-sm-8 col-sm-offset-2 text-center">
@@ -178,9 +130,6 @@
             </li>
             <li class="info">Putting my fundamental digital skills to work to bring your ideas to life with beautifully designed blueprints
               for your future web page or web site.</li>
-            <li class="features first">Web page re-design or design</li>
-            <li class="features">Website re-design or design</li>
-            <li class="features">Moodboards, wireframes, site maps and more.</li>
             <li class="features last btn btn-secondary btn-wide">
               <a href="#contact">Get Free Consultation</a>
             </li>
@@ -226,11 +175,120 @@
     </div>
   </section>
 
+  <section id="bg" class="pad-xs">
+    <div class="container">
+      <div class="row">
+        <div class="portfolioHeader col-sm-8 col-sm-offset-2 text-center margin-0 wow fadeIn" data-wow-delay="0.6s">
+          <h2 class="sectionHeaders">Portfolio</h2>
+          <p class="lead">Built utilizing HTML, CSS and Javascript.
+            <br>All responsively designed to ensure the optimal user experience across various devices.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="main-info" class="pad-xs">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+          <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
+            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
+          </div>
+          <hr class="line purple">
+          <a href="https://replicode.herokuapp.com/" target="_blank">
+            <h3>RepliCode</h3>
+          </a>
+          <p>Today, there are many learning resources available for those wishing to teach themselves how to code. One of the
+            learning mediums that both beginners and experienced developers alike often seek out are video coding tutorials.
+            Video tutorials are great learning resources but they lack the level of interactiveness that learning developers
+            yearn for, so together with a team of developers I developed a solution called Replicode, a content creation
+            platform that allows developers to easily create interactive coding tutorials.</p>
+        </div>
+        <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
+          <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
+            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
+          </div>
+          <hr class="line purple">
+          <a href="https://chrisauinmotion.github.io/projectEuler_challenge1/" target="_blank">
+            <h3>MyDigiDiet</h3>
+          </a>
+          <p>MyDigiDiet is a desktop application that helps give users insight into their digital habits. The application was
+            created using Electron (a framework for creating native applications with web technologies like JavaScript, HTML,
+            and CSS), React (a JavaScript library for building user interfaces), Reactstrap (a module that makes it easy
+            to use React Bootstrap 4 components), Webpack (a module whose main purpose is to bundle JavaScript files) and
+            React-chartjs (a module that provides rich interactive react charting components using chart.js).
+          </p>
+        </div>
+        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+          <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
+            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
+          </div>
+          <hr class="line purple">
+          <a href="https://www.inpaclive.com/" target="_blank">
+            <h3>Inpaclive.com</h3>
+          </a>
+          <p>A website built for a talented independent hip-hop artist. The beautiful platform connects the artist's fans to
+            all of his media and presence around the web. Powered with tools for direct sales, building a contact list and
+            collecting valuable analytics that will aid in improving fan engagement.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!--Publications-->
+  <section id="service" class="pad-lg">
+    <div class="container">
+      <div class="row margin-40">
+        <div class="col-sm-8 col-sm-offset-2 text-center">
+          <h2 class="sectionHeaders white">Publications</h2>
+        </div>
+      </div>
+
+      <div class="row margin-50">
+
+        <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
+          <ul class="list-unstyled service-table text-center">
+            <li class="headline2">
+              <img src"https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
+            </li>
+            <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
+            <li class="info">As many professionals today, my career as not been a straight predictable path.  In this post I share my experiences and the professional journey that brought me to where I am today.</li>
+            <li class="features last btn btn-secondary btn-wide">
+              <a href="#contact">Read on Medium</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
+          <ul class="list-unstyled service-table text-center">
+            <li class="headline2">
+              <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
+            </li>
+            <li class="features">A New World: The Promise of Blockchain</li>
+            <li class="info">There has been a lot of buzz surrounding crytocurrencies and blockchain. This piqued my curiosity, so I delve
+              into the topic looking to get a grasp of the technologies involved and their potential impact. I then wrote
+              an article which serves both as a primer to blockchain technology and an exploration of its possibilities.</li>
+            <li class="features last btn btn-secondary btn-wide">
+              <a href="#contact">Read on Medium</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
 
   <footer id="contact" class="pad-sm light-gray-bg">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 text-center">
+          <h2 class="black">Contact</h2>
+          <br>
+          <p class="black">Checkout my LinkedIn and Github! Feel free to reach out. I am always open to grab a cup of coffe, talk about tech
+            and current events, as well as work on interesting projects.</p>
+          <br>
           <div class="row">
             <div class="col-xs-4 text-center">
               <a href="https://github.com/chrisauinmotion/" target="_blank">
@@ -239,40 +297,18 @@
               </a>
             </div>
             <div class="col-xs-4 text-center" target="_blank">
-              <a href="#contact">
+              <a href="mailto:chrisaugustusp@gmail.com">
                 <img class="contactIcon2" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/emailIcon.png"
                   alt="Email icon" style="width:44px;height:44px;border:0">
               </a>
             </div>
             <div class="col-xs-4 text-center">
-              <a href="https://codepen.io/chrisauinmotion/" target="_blank">
-                <img class="contactIcon3" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/codepen-logo.png"
+              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/" target="_blank">
+                <img class="contactIcon3" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png"
                   alt="Codepen icon" style="width:90px;height:90px;border:0">
               </a>
             </div>
           </div>
-          <h2 class="black">Contact</h2>
-          <br>
-          <p class="black">Let's get started! Send me a message with a brief description of what you wish to accomplish and I will get back
-            to you to get started on your free consultation.</p>
-          <br>
-
-          <div class="row">
-
-            <form class="cf" method="post" action="mailto:chrisauinmotion@gmail.com">
-              <div class="half left cf">
-                <input type="text" id="input-name" placeholder="Name">
-                <input type="email" id="input-email" placeholder="Email address">
-                <input type="text" id="input-subject" placeholder="Subject">
-              </div>
-              <div class="half right cf">
-                <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
-              </div>
-              <input type="submit" value="Submit" id="input-submit">
-            </form>
-          </div>
-          <!--End Form row-->
-
         </div>
       </div>
     </div>
