Refactoring landing section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a href="#skills" class="scroll">Skills</a>
-              </li>
+          <li>
+            <a href="#skills" class="scroll">Skills</a>
+          </li>
           <li>
             <a href="#bg" class="scroll">Portfolio</a>
           </li>
@@ -78,14 +78,13 @@
             <!--<img class="logoR" src="img/cpR.png" alt="Logo">-->Perez</h1>
           <h2 class="wow fadeIn headerH2">Full Stack Developer</h1>
             <br>
-            <p class="lead wow fadeIn" data-wow-delay="0.5s">As a young software engineer with a degree in business and
-              <br> experience developing in a NERDS stack (Node.js, Express, React, Databases using SQL)
-              <br> I am eager to build tools and platforms that provide solutions to problems that will
-              <br> have a meaningful impact in the world.</p>
+            <p class="lead wow fadeIn" data-wow-delay="0.5s">As a young software engineer with a degree in business and experience developing in a NERDS stack (Node.js, Express, React, Databases using SQL)
+              <br> I am eager to build tools and platforms that provide solutions to problems that will have a meaningful impact
+              in the world.</p>
             <br>
 
             <div class="row">
-              <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+              <div class="col-md-8 col-sm-10 col-sm-offset-1">
                 <div class="row">
                   <div class="col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
                     <a href="#skills" class="btn btn-primary btn-lg scroll">Skills</a>
@@ -250,10 +249,11 @@
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
             <li class="headline2">
-              <img src"https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
+              <img src "https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
             </li>
             <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
-            <li class="info">As many professionals today, my career as not been a straight predictable path.  In this post I share my experiences and the professional journey that brought me to where I am today.</li>
+            <li class="info">As many professionals today, my career as not been a straight predictable path. In this post I share my experiences
+              and the professional journey that brought me to where I am today.</li>
             <li class="features last btn btn-secondary btn-wide">
               <a href="#contact">Read on Medium</a>
             </li>
