Refactoring landing section

--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
             <!--<img class="logoR" src="img/cpR.png" alt="Logo">-->Perez</h1>
           <h2 class="wow fadeIn headerH2">Full Stack Developer</h1>
             <br>
-            <p class="lead wow fadeIn" data-wow-delay="0.5s">As a young software engineer with a degree in business and experience developing in a NERDS stack (Node.js, Express, React, Databases using SQL)
-              <br> I am eager to build tools and platforms that provide solutions to problems that will have a meaningful impact
+            <p class="lead wow fadeIn" data-wow-delay="0.5s">
+              As a young software engineer with a degree in business and experience 
+              <br> developing in a NERDS stack (Node.js, Express, React, Databases using SQL)
+              <br> I am eager to build tools and platforms that provide solutions to problems 
+              <br> that will have a meaningful impact
               in the world.</p>
             <br>
 
