--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
             <br>
 
             <div class="row">
-              <div class="col-md-12 col-sm-10 col-sm-offset-1">
+              <div class="col-md-8 col-sm-10 col-sm-offset-1">
                 <div class="row">
-                  <div class="col-md-offset-2 col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
+                  <div class="col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
                     <a href="#skills" class="btn btn-primary btn-lg scroll">Skills</a>
                   </div>
-                  <div class="col-md-offset-1 col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
+                  <div class="col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
                     <a href="#bg" class="btn btn-primary btn-lg scroll">Portfolio</a>
                   </div>
-                  <div class="col-md-offset-1 col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1.4s">
+                  <div class="col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1.4s">
                     <a href="#service" class="btn btn-primary btn-lg scroll">Publications</a>
                   </div>
-                  <div class="col-md-offset-1 col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1.8s">
+                  <div class="col-md-1 col-xs-4 text-center wow fadeInUp" data-wow-delay="1.8s">
                     <a href="#contact" class="btn btn-primary btn-lg scroll">Contact</a>
                   </div>
                 </div>
