Added skills section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="container">
       <div class="row margin-40">
         <div class="col-sm-8 col-sm-offset-2 text-center">
-          <h2 class="sectionHeaders white">Publications</h2>
+          <h2 class="sectionHeaders white">Skills</h2>
         </div>
       </div>
 
@@ -128,12 +128,16 @@
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
             <li class="headline">
-              <h5 class="white">Web Design</h5>
+              <h5 class="white">Knowledgeable</h5>
             </li>
-            <li class="info">Putting my fundamental digital skills to work to bring your ideas to life with beautifully designed blueprints
-              for your future web page or web site.</li>
+            <li class="features first">Electron</li>
+            <li class="features">Git</li>
+            <li class="features">CSS</li>
+            <li class="features">Bootstrap</li>
+            <li class="features">Webpack</li>
+            <li class="features">Wafle.io</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="#contact">Get Free Consultation</a>
+              <a href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -142,15 +146,18 @@
           <br>
           <ul class="list-unstyled service-table active text-center">
             <li class="headline">
-              <h5 class="white">Front-end Development</h5>
+              <h5 class="white">Proficient</h5>
             </li>
-            <li class="info">Your ideas together with my web development prowess will make for beautiful web babies.</li>
-            <li class="features first">Building a simple site with multiple pages</li>
-            <li class="features">Building or redesigning a single page</li>
-            <li class="features">Transform Web designs to HTML/CSS sites</li>
-            <li class="features">Website updates and maintenance</li>
+            <li class="features first">Javascript</li>
+            <li class="features">Node.js</li>
+            <li class="features">React</li>
+            <li class="features">Redux</li>
+            <li class="features">PostgreSQL</li>
+            <li class="features">Sqeuelize</li>
+            <li class="features">Express</li>
+            <li class="features">HTML</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="#contact">Get Free Consultation</a>
+              <a href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -158,17 +165,18 @@
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1.3s">
           <br>
           <ul class="list-unstyled service-table3 text-center">
-            <li class="headline">
-              <h5 class="white">Mobile Development</h5>
-            </li>
-            <li class="info">With the proliferation of mobile devices your web presence must be developed to ensure optimal user experiences
-              across all possible digital platforms. </li>
-            <li class="features first">Building a fully responsive website</li>
-            <li class="features">Adapting an existing website to be mobile friendly</li>
-            <li class="features">Mobile user experience design</li>
-            <li class="features last btn btn-secondary btn-wide">
-              <a href="#contact">Get Free Consultation</a>
-            </li>
+              <li class="headline">
+                  <h5 class="white">Some Experience</h5>
+                </li>
+                <li class="features first">Mocha</li>
+                <li class="features">Chai</li>
+                <li class="features">Jasmine</li>
+                <li class="features">Bootstrap</li>
+                <li class="features">Webpack</li>
+                <li class="features">Wafle.io</li>
+                <li class="features last btn btn-secondary btn-wide">
+                  <a href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png">Visit My LinkedIn Page</a>
+                </li>
           </ul>
         </div>
 
@@ -182,8 +190,7 @@
       <div class="row">
         <div class="portfolioHeader col-sm-8 col-sm-offset-2 text-center margin-0 wow fadeIn" data-wow-delay="0.6s">
           <h2 class="sectionHeaders">Portfolio</h2>
-          <p class="lead">Built utilizing HTML, CSS and Javascript.
-            <br>All responsively designed to ensure the optimal user experience across various devices.</p>
+          <p class="lead">Built utilizing the NERDS stack (Node.js, Express, React, Databases using SQL)</p>
         </div>
       </div>
     </div>
