--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
             platform that allows developers to easily create interactive coding tutorials.</p>
         </div>
         <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-          <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
+          <div class="style="margin-top: 5%; margin-bottom: -5%" text-center iphone wow fadeInUp" data-wow-delay="1.8s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
           </div>
           <hr class="line purple">
-          <a href="https://chrisauinmotion.github.io/projectEuler_challenge1/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=R8uP2wKp4n0" target="_blank">
             <h3>MyDigiDiet</h3>
           </a>
           <p>MyDigiDiet is a desktop application that helps give users insight into their digital habits. The application was
@@ -228,7 +228,7 @@
             React-chartjs (a module that provides rich interactive react charting components using chart.js).
           </p>
         </div>
-        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+        <div style="margin-top: 5%; margin-bottom: -5%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
           </div>
