--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <section id="main-info" class="pad-xs">
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+        <div style="margin-top: 5%; margin-bottom: -5%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
           </div>
@@ -213,8 +213,8 @@
             yearn for, so together with a team of developers I developed a solution called Replicode, a content creation
             platform that allows developers to easily create interactive coding tutorials.</p>
         </div>
-        <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-          <div class="style="margin-top: 5%; margin-bottom: -5%" text-center iphone wow fadeInUp" data-wow-delay="1.8s">
+        <div style="margin-top: 5%; margin-bottom: -5%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
+          <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
           </div>
           <hr class="line purple">
