--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <section id="main-info" class="pad-xs">
     <div class="container">
       <div class="row">
-        <div style="margin-top: 5%; margin-bottom: -5%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+        <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
           </div>
@@ -213,7 +213,7 @@
             yearn for, so together with a team of developers I developed a solution called Replicode, a content creation
             platform that allows developers to easily create interactive coding tutorials.</p>
         </div>
-        <div style="margin-top: 5%; margin-bottom: -5%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
+        <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
           </div>
@@ -228,7 +228,7 @@
             React-chartjs (a module that provides rich interactive react charting components using chart.js).
           </p>
         </div>
-        <div style="margin-top: 5%; margin-bottom: -5%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+        <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
             <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
           </div>
