--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
       <div class="row">
         <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
+            <img
+            href="https://replicode.herokuapp.com/" 
+            src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
           </div>
           <hr class="line purple">
           <a href="https://replicode.herokuapp.com/" target="_blank">
@@ -215,7 +217,9 @@
         </div>
         <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
+            <img
+             href="https://www.youtube.com/watch?v=R8uP2wKp4n0"
+             src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
           </div>
           <hr class="line purple">
           <a href="https://www.youtube.com/watch?v=R8uP2wKp4n0" target="_blank">
@@ -230,7 +234,9 @@
         </div>
         <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
-            <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
+            <img
+            href="https://www.inpaclive.com/" 
+            src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
           </div>
           <hr class="line purple">
           <a href="https://www.inpaclive.com/" target="_blank">
