--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <li class="features">Webpack</li>
             <li class="features">Wafle.io</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png">Visit My LinkedIn Page</a>
+              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -157,7 +157,7 @@
             <li class="features">Express</li>
             <li class="features">HTML</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png">Visit My LinkedIn Page</a>
+              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -175,7 +175,7 @@
                 <li class="features">Webpack</li>
                 <li class="features">Wafle.io</li>
                 <li class="features last btn btn-secondary btn-wide">
-                  <a href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png">Visit My LinkedIn Page</a>
+                  <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
                 </li>
           </ul>
         </div>
@@ -265,13 +265,15 @@
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
             <li class="headline2">
-              <img src "https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
+              <img
+              style="width: 200px; height: auto" 
+              src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
             </li>
             <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
             <li class="info">As many professionals today, my career as not been a straight predictable path. In this post I share my experiences
               and the professional journey that brought me to where I am today.</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="#contact">Read on Medium</a>
+              <a href="https://medium.com/@chrisaugustusp/how-i-am-making-the-pivot-into-a-career-in-web-development-my-climb-to-the-mountain-top-d7174d5f3b54">Read on Medium</a>
             </li>
           </ul>
         </div>
@@ -279,14 +281,16 @@
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
             <li class="headline2">
-              <img src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
+              <img 
+              style="width: 200px; height: auto" 
+              src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
             </li>
             <li class="features">A New World: The Promise of Blockchain</li>
             <li class="info">There has been a lot of buzz surrounding crytocurrencies and blockchain. This piqued my curiosity, so I delve
               into the topic looking to get a grasp of the technologies involved and their potential impact. I then wrote
               an article which serves both as a primer to blockchain technology and an exploration of its possibilities.</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="#contact">Read on Medium</a>
+              <a href="https://medium.com/@chrisaugustusp/a-new-world-the-promise-of-blockchain-9606e752b34d">Read on Medium</a>
             </li>
           </ul>
         </div>
