--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
           <h2 class="wow fadeIn headerH2">Full Stack Developer</h1>
             <br>
             <p class="lead wow fadeIn" data-wow-delay="0.5s">
-              As a young software engineer with a degree in business and experience 
+              As a young software engineer with a degree in business and experience
               <br> developing in a NERDS stack (Node.js, Express, React, Databases using SQL)
-              <br> I am eager to build tools and platforms that provide solutions to problems 
-              <br> that will have a meaningful impact
-              in the world.</p>
+              <br> I am eager to build tools and platforms that provide solutions to problems
+              <br> that will have a meaningful impact in the world.</p>
             <br>
 
             <div class="row">
@@ -165,18 +164,18 @@
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1.3s">
           <br>
           <ul class="list-unstyled service-table3 text-center">
-              <li class="headline">
-                  <h5 class="white">Some Experience</h5>
-                </li>
-                <li class="features first">Mocha</li>
-                <li class="features">Chai</li>
-                <li class="features">Jasmine</li>
-                <li class="features">Bootstrap</li>
-                <li class="features">Webpack</li>
-                <li class="features">Wafle.io</li>
-                <li class="features last btn btn-secondary btn-wide">
-                  <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
-                </li>
+            <li class="headline">
+              <h5 class="white">Some Experience</h5>
+            </li>
+            <li class="features first">Mocha</li>
+            <li class="features">Chai</li>
+            <li class="features">Jasmine</li>
+            <li class="features">Bootstrap</li>
+            <li class="features">Webpack</li>
+            <li class="features">Wafle.io</li>
+            <li class="features last btn btn-secondary btn-wide">
+              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
+            </li>
           </ul>
         </div>
 
@@ -201,9 +200,7 @@
       <div class="row">
         <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
-            <img
-            href="https://replicode.herokuapp.com/" 
-            src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
+            <img href="https://replicode.herokuapp.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
           </div>
           <hr class="line purple">
           <a href="https://replicode.herokuapp.com/" target="_blank">
@@ -217,9 +214,7 @@
         </div>
         <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
-            <img
-             href="https://www.youtube.com/watch?v=R8uP2wKp4n0"
-             src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
+            <img href="https://www.youtube.com/watch?v=R8uP2wKp4n0" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
           </div>
           <hr class="line purple">
           <a href="https://www.youtube.com/watch?v=R8uP2wKp4n0" target="_blank">
@@ -234,9 +229,7 @@
         </div>
         <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
           <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
-            <img
-            href="https://www.inpaclive.com/" 
-            src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
+            <img href="https://www.inpaclive.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
           </div>
           <hr class="line purple">
           <a href="https://www.inpaclive.com/" target="_blank">
@@ -264,11 +257,7 @@
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
-            <li class="headline2">
-              <img
-              style="width: 200px; height: auto" 
-              src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
-            </li>
+            <img style="width: 300px; height: auto" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
             <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
             <li class="info">As many professionals today, my career as not been a straight predictable path. In this post I share my experiences
               and the professional journey that brought me to where I am today.</li>
@@ -280,11 +269,7 @@
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
-            <li class="headline2">
-              <img 
-              style="width: 200px; height: auto" 
-              src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
-            </li>
+            <img style="width: 300px; height: auto" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
             <li class="features">A New World: The Promise of Blockchain</li>
             <li class="info">There has been a lot of buzz surrounding crytocurrencies and blockchain. This piqued my curiosity, so I delve
               into the topic looking to get a grasp of the technologies involved and their potential impact. I then wrote
