--- a/index.html
+++ b/index.html
@@ -257,10 +257,11 @@
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
-            <img style="width: auto; height: auto" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
+            <img style="width: 390px; height: 305px" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
             <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
             <li class="info">As many professionals today, my career as not been a straight predictable path. In this post I share my experiences
-              and the professional journey that brought me to where I am today.</li>
+              and the professional journey that brought me to where I am today.<br><br>
+            </li>
             <li class="features last btn btn-secondary btn-wide">
               <a href="https://medium.com/@chrisaugustusp/how-i-am-making-the-pivot-into-a-career-in-web-development-my-climb-to-the-mountain-top-d7174d5f3b54">Read on Medium</a>
             </li>
@@ -269,8 +270,8 @@
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
-            <img style="width: auto; height: auto" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
-            <li class="features">A New World: The Promise of Blockchain</li>
+            <img style="width: 390px; height: 305px" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
+            <li class="features">A New World: The Promise of Blockchain <br></li>
             <li class="info">There has been a lot of buzz surrounding crytocurrencies and blockchain. This piqued my curiosity, so I delve
               into the topic looking to get a grasp of the technologies involved and their potential impact. I then wrote
               an article which serves both as a primer to blockchain technology and an exploration of its possibilities.</li>
