--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </div>
       </div>
 
-      <div class="landing-btns row margin-50">
+      <div class="publications row margin-50">
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
