--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
           <p class="black">Checkout my LinkedIn and Github! Feel free to reach out. I am always open to grab a cup of coffe, talk about tech
             and current events, as well as work on interesting projects.</p>
           <br>
-          <div class="row">
+          <div style="display: flex; justify-content: space-around" class="row">
             <div class="col-xs-4 text-center">
               <a href="https://github.com/chrisauinmotion/" target="_blank">
                 <img class="contactIcon1" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/githubIcon.png"
-                  alt="Github icon" style="width:42px;height:42px;border:0">
+                  alt="Github icon" style="width:44px;height:44px;border:0">
               </a>
             </div>
             <div class="col-xs-4 text-center" target="_blank">
@@ -311,7 +311,7 @@
             <div class="col-xs-4 text-center">
               <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/" target="_blank">
                 <img class="contactIcon3" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/linkedinicon.png"
-                  alt="Codepen icon" style="width:90px;height:90px;border:0">
+                  alt="Codepen icon" style="width:44px;height:44px;border:0">
               </a>
             </div>
           </div>
