--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
             <li class="features">Webpack</li>
             <li class="features">Wafle.io</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
+              <a 
+              target="_blank"
+              href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -156,7 +158,9 @@
             <li class="features">Express</li>
             <li class="features">HTML</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
+              <a 
+              target="_blank"
+              href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -174,7 +178,9 @@
             <li class="features">Webpack</li>
             <li class="features">Wafle.io</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
+              <a 
+              target="_blank"
+              href="https://www.linkedin.com/in/christopher-p%C3%A9rez-14192214/">Visit My LinkedIn Page</a>
             </li>
           </ul>
         </div>
@@ -263,7 +269,9 @@
               and the professional journey that brought me to where I am today.<br><br><br>
             </li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://medium.com/@chrisaugustusp/how-i-am-making-the-pivot-into-a-career-in-web-development-my-climb-to-the-mountain-top-d7174d5f3b54">Read on Medium</a>
+              <a 
+              target="_blank"
+              href="https://medium.com/@chrisaugustusp/how-i-am-making-the-pivot-into-a-career-in-web-development-my-climb-to-the-mountain-top-d7174d5f3b54">Read on Medium</a>
             </li>
           </ul>
         </div>
@@ -276,7 +284,9 @@
               into the topic looking to get a grasp of the technologies involved and their potential impact. I then wrote
               an article which serves both as a primer to blockchain technology and an exploration of its possibilities.</li>
             <li class="features last btn btn-secondary btn-wide">
-              <a href="https://medium.com/@chrisaugustusp/a-new-world-the-promise-of-blockchain-9606e752b34d">Read on Medium</a>
+              <a 
+              target="_blank"
+              href="https://medium.com/@chrisaugustusp/a-new-world-the-promise-of-blockchain-9606e752b34d">Read on Medium</a>
             </li>
           </ul>
         </div>
