--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <ul class="list-unstyled service-table text-center">
             <img style="width: 390px; height: 305px" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
             <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
-            <li class="info">As many professionals today, my career as not been a straight predictable path. In this post I share my experiences
+            <li class="info">As many professionals today, my career has not been a straight predictable path. In this post I share my experiences
               and the professional journey that brought me to where I am today.<br><br><br>
             </li>
             <li class="features last btn btn-secondary btn-wide">
