--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="col-sm-8 col-sm-offset-2 text-center">
           <h2 class="black">Contact</h2>
           <br>
-          <p class="black">Checkout my LinkedIn and Github! Feel free to reach out. I am always open to grab a cup of coffe, talk about tech
+          <p class="black">Checkout my LinkedIn and Github! Feel free to reach out. I am always open to grab a cup of coffee, talk about tech
             and current events, as well as work on interesting projects.</p>
           <br>
           <div style="display: flex; justify-content: space-around" class="row">
