--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <br> that will have a meaningful impact in the world.</p>
             <br>
 
-            <div class="row">
+            <div class="row hidden-xs">
               <div class="col-sm-10 col-sm-offset-1">
                 <div class="landing-btns row">
                   <div class="col-xs-4 text-center wow fadeInUp" data-wow-delay="1s">
