--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
-            <img style="width: 390px; height: 305px" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
+            <img class="publications-img" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/mountainclimb.png">
             <li class="features">How I am Making the Pivot into a Career in Web Development. My Climb to the Mountain Top</li>
             <li class="info">As many professionals today, my career has not been a straight predictable path. In this post I share my experiences
               and the professional journey that brought me to where I am today.<br><br><br>
@@ -278,7 +278,7 @@
 
         <div class="col-sm-4 service-container wow fadeInUp" data-wow-delay="1s">
           <ul class="list-unstyled service-table text-center">
-            <img style="width: 390px; height: 305px" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
+            <img class="publications-img" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/blockchainworld.jpg">
             <li class="features">A New World: The Promise of Blockchain <br><br></li>
             <li class="info">There has been a lot of buzz surrounding crytocurrencies and blockchain. This piqued my curiosity, so I delve
               into the topic looking to get a grasp of the technologies involved and their potential impact. I then wrote
