--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" href="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/cp-sm.png">
 
   <script src="js/modernizr-2.7.1.js"></script>
 
